# pca

./: .gitignore  Cargo.toml  README.md
client/: .gitignore  Dockerfile  README.md  requirements.txt
client/deployment/: docker-compose.yaml  mediamtx.yml
client/src/: connection.py  counter_pb2.py  counter_pb2_grpc.py  dataloader.py  detector.py  main.py  utils.py
client/src/generated_protos/: detector_pb2.py  detector_pb2_grpc.py
integration/: docker-compose.yaml  mediamtx.yml  rtsp_server.py
integration/docker_registry/: docker-compose.yaml
integration/protos/: connection.proto  counter.proto  counter_pb2.py  counter_pb2_grpc.py  detector.proto
server/: Cargo.toml  interesting.txt
server/backend/: Cargo.toml  build.rs
server/backend/src/: broad_cast_message.rs  counter_store.rs  detector_store.rs  main.rs  server.rs  text_store.rs  websocket_connection.rs
server/frontend/src/: App.svelte
server/src/: main.rs
src/: detection.rs  main.rs
