[package]
name = "pca"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = "2.0.0-rc.0"
ndarray = "0.15"
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
image = "0.24"
show-image = { version = "0.13", features = [ "image", "raqote" ] }
raqote = { version = "0.8", default-features = false }
ureq = "2.1"
tracing = "0.1"
anyhow = "1.0.80"
opencv = "0.88.8"

[features]
load-dynamic = [ "ort/load-dynamic" ]
cuda = [ "ort/cuda" ]
