[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build="build.rs"

[dependencies]
env_logger = "0.11.5"
futures-util = "0.3.31"
log = "0.4.22"
prost = "0.13.3"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = "0.24.0"
tonic = "0.12.3"
tonic-build = "0.12.3"
warp = "0.3.7"

[build-dependencies]
tonic-build = "0.12.3"

